# Stereo-LiDAR-Calibration

./: .gitignore  README.md  calib.sh  capture.sh  latency_probe.py  launch.sh  projection.sh  sync_capture.py  tf_change.sh
docs/: CALIBRATION_REPORT.md
src/charuco_lidar_calib/: README.md  package.xml  setup.cfg  setup.py
src/charuco_lidar_calib/charuco_lidar_calib/: board.py  calibrate.py  charuco_pose.py  colorize.py  dict_sniffer.py  grab_camera_info.py  lidar_board.py  pcd_io.py  solve.py  stereo_pose.py  tf_publisher_node.py  verify.py
src/charuco_lidar_calib/config/: calib.yaml
src/charuco_lidar_calib/launch/: tf_publisher.launch.py
src/fsg_sensors/: package.xml  setup.cfg  setup.py
src/fsg_sensors/config/: rslidar.yaml  zed_override.yaml
src/fsg_sensors/config/extrinsics/: nominal.yaml
src/fsg_sensors/config/extrinsics/history/: 2026-07-04_zed2i_bench.yaml  2026-07-17_0324.yaml  2026-07-17_0335.yaml
src/fsg_sensors/fsg_sensors/: preflight.py  zed_relay.py
src/fsg_sensors/launch/: sensors.launch.py
