<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>charuco_lidar_calib</name>
  <version>0.1.0</version>
  <description>
    Extrinsic calibration between a ZED2i camera and a RoboSense RS-16 LiDAR using
    an 8x7 ChArUco board. ChArUco gives a robust camera-side board pose; the LiDAR
    board plane/corners are extracted semi-automatically (ROI click + RANSAC plane);
    a multi-pose Kabsch (3D-3D) solve yields the rigid extrinsic transform.
  </description>
  <maintainer email="shchon724@gmail.com">race</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ros2topic</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
